# MinecraftServerManager

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  logfile  pyproject.toml
Database/: Data.sql  InsertCompressedWorld.sql  Schema.sql
Notes/: PlayerEntityData.txt
Scripts/: convert_directory_to_postgres_bytes.py
Source/: Dockerfile  Update.py  __main__.py  server.py  server_processes.py  world_actions.py
Source/HTML/Templates/: Header.j2  NewVersion.j2  NewWorld.j2  Versions.j2  Worlds.j2
Source/database/classes/: __init__.py  world.py
Source/database/queries/: __init__.py  get.py  new.py  update.py  versions.py  worlds.py
Source/docker/: __init__.py  image.py
Source/webapp/Static/: Style.css
Source/webapp/Templates/locations/: new.j2
Source/webapp/Templates/worlds/: index.j2  (+1 more)
Source/webapp/routes/: versions.py  worlds.py
source/: __main__.py  logger.py  updater.py
source/database/: __init__.py  connect.py
source/database/classes/: __init__.py  biome.py  location.py  player.py  version.py  world.py
source/database/queries/: __init__.py  biomes.py  locations.py  players.py  versions.py  worlds.py
source/docker/: api.py  container.py  image.py  minecraft.py
source/minecraft/: __init__.py
source/update/: __init__.py
source/updater/: __init__.py
source/webapp/: __init__.py
source/webapp/Templates/: index.j2
source/webapp/routes/: __init__.py  biomes.py  players.py  versions.py
source1/: __main__.py
source1/database/classes/: world.py
source1/webapp/Templates/: Header.j2
source1/webapp/routes/: versions.py
(+24 files in other folders)
